# nova-media-manager

./: .gitignore  CLAUDE.md  DEPLOY.md  DEVELOPMENT.md  DIFFERENTIATION-PLAN.md  LICENSE  README.md  SCENE-SCRIPT-DESIGN.md  THEME-STUDIO-DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  secondary.html  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml  check-3d-module.yml  release.yml
docs/: SECURITY-HARDENING.md  commercial-evaluation.md  marketing-plan.md  operations-strategy.md  product-design-assessment.md  release-guide.md  test-cases.md  test-report.md  theme-system-design.md  widget-design-spec.md  产品方案.md  推广与定制收费指南.md  视频宣传方案.md
docs/webgl3d-spec/: 00_文档索引与交叉引用表.md  00_项目全局总述.md  01_产品通用规范.md  02_全局开发强制标准.md  03_公私仓库与素材目录标准.md  04_WebGL三层分层架构文档.md  05_3D场景通用渲染管线规范.md  06_着色器开发通用规范.md  07_3D交互系统通用设计标准.md  08_加密3D资源加载通用流程.md  09_素材通用生成约束规范.md  10_离线贴图自动化管线规范.md  11_主题元数据通用Schema标准.md  12_WebGL画布通用组件开发规范.md  13_3D全局状态通用结构.md  14_3D配套UI-UX通用交互规范.md  15_3D资源底层调用接口文档.md  16_3D用户存档通用数据结构.md  17_专属资源包打包加密通用规范.md  18_WebGL 3D主题标准化开发流程.md  19_3D渲染通用性能测试与优化标准.md  PROGRESS.md  (+2 more)
public/fonts/warpnine-fonts-main/warpnine-fonts-main/: .gitignore  Cargo.toml  LICENSE  OFL  README.md  pyproject.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/.github/workflows/: release.yml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/cli/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/cli/src/: cli.rs  dev.rs  lib.rs  main.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/core/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/core/src/: config.rs  freeze_batch.rs  instance.rs  io.rs  lib.rs  merge.rs  parallel.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/core/src/pipeline/: clean.rs  download.rs  mod.rs  steps.rs  vf.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/core/src/styles/: design.rs  features.rs  instances.rs  mod.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/core/src/warpnine/: calt.rs  condense.rs  ligatures.rs  mod.rs  naming.rs  sans.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-condense/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-condense/src/: lib.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-freezer/: Cargo.toml  README.md
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-freezer/src/: error.rs  font.rs  gsub.rs  lib.rs  main.rs  types.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-freezer/tests/: integration_test.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-instancer/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-instancer/src/: error.rs  instancer.rs  lib.rs  main.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-merger/: Cargo.toml  README.md
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-merger/src/: context.rs  convert.rs  error.rs  glyph_order.rs  lib.rs  main.rs  merger.rs  options.rs  strategies.rs  types.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-merger/src/tables/: cff.rs  cmap.rs  glyf.rs  head.rs  hhea.rs  hint.rs  hmtx.rs  layout.rs  layout_types.rs  maxp.rs  mod.rs  name.rs  os2.rs  post.rs  vhea.rs  vmtx.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-merger/tests/: integration_tests.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-metadata/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-metadata/src/: lib.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-ops/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-ops/src/: lib.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-ops/tests/: apply_style.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-subsetter/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-subsetter/src/: lib.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-vf-builder/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-vf-builder/src/: designspace.rs  error.rs  lib.rs  variation_model.rs  vf_builder.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-woff2/: Cargo.toml
public/fonts/warpnine-fonts-main/warpnine-fonts-main/crates/font-woff2/src/: lib.rs
public/fonts/warpnine-fonts-main/warpnine-fonts-main/docs/: sample.typ
public/fonts/warpnine-fonts-main/warpnine-fonts-main/tests/: woff2-test.html
public/fonts/warpnine-fonts-main/warpnine-fonts-main/tests/integration/: test_font_output_validation.py
scripts/: add-missing-keys.cjs  build-cyber-grid.mjs  build-cyberpunk.mjs  build-icons.mjs  build-landing.mjs  check-themes.mjs  check-webgl3d.sh  convert-webp.mjs  fill-locales.cjs  find-unwrapped.mjs  fix-layout-icons.mjs  fix-nav-icons.mjs  fix-nav-svg.mjs  generate-updater-key.mjs  pack-release.sh  patch-layout-final.mjs  patch-layout-icons.mjs  patch-layout-v2.mjs  patch-layout-v3.mjs  pull.ps1  push.ps1  render-neon-icons.mjs  replace-lucide.mjs  theme-generate.mjs  theme-pack.mjs  update-refs.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/license/: mod.rs
src-tauri/plugins/: .gitkeep
src-tauri/src/: db.rs  lib.rs  logger.rs  windows.rs
src-tauri/src/commands/: anti_bot.rs  checkin.rs  convert.rs  dashboard_stats.rs  external_player.rs  extract_icon.rs  ffmpeg_helper.rs  file_explorer.rs  folder_scan.rs  game.rs  hevc.rs  image.rs  mod.rs  movie.rs  music.rs  performance.rs  quick_launch.rs  screenshot.rs  shell.rs  steam_scanner.rs  system.rs  system_tools.rs  theme_studio.rs  unblock.rs  user_data.rs
src-tauri/src/commands/webgl3d/: mod.rs  nv3d.rs
src-tauri/src/theme/: crypto.rs  default_theme.json  loader.rs  mod.rs  packer.rs  protocol.rs  tokens.rs
(+626 files in other folders)
