[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/core",
    "crates/font-condense",
    "crates/font-freezer",
    "crates/font-instancer",
    "crates/font-merger",
    "crates/font-metadata",
    "crates/font-ops",
    "crates/font-subsetter",
    "crates/font-vf-builder",
    "crates/font-woff2",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Font libraries
read-fonts = "0.39"
write-fonts = "0.48"
skrifa = "0.42"
font-types = "0.11"
hb-subset = { version = "0.3", features = ["bundled"] }

# CLI
clap = { version = "4.6", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
rayon = "1.12"
chrono = "0.4"
indexmap = "2.14"
kurbo = "0.13"
glob = "0.3"
sha2 = "0.10"

# Network/IO
reqwest = { version = "0.13", features = ["blocking"] }
zip = "8.6"

# Testing
font-test-data = "0.6"

# Workspace crates
warpnine-core = { path = "crates/core" }
warpnine-font-condense = { path = "crates/font-condense" }
warpnine-font-feature-freezer = { path = "crates/font-freezer", default-features = false }
warpnine-font-instancer = { path = "crates/font-instancer", default-features = false }
warpnine-font-merger = { path = "crates/font-merger" }
warpnine-font-metadata = { path = "crates/font-metadata" }
warpnine-font-ops = { path = "crates/font-ops" }
warpnine-font-subsetter = { path = "crates/font-subsetter" }
warpnine-font-vf-builder = { path = "crates/font-vf-builder" }
warpnine-font-woff2 = { path = "crates/font-woff2" }
