[package]
name = "warpnine-fonts-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Build Warpnine fonts from Recursive and Noto CJK sources"
repository = "https://github.com/0x6b/warpnine-fonts"

[[bin]]
name = "warpnine-fonts"
path = "src/main.rs"

[lib]
name = "warpnine_fonts_cli"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
read-fonts.workspace = true

# Core functionality
warpnine-core.workspace = true
warpnine-font-ops.workspace = true