[package]
name = "warpnine-font-instancer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Convert variable fonts to static instances"
repository = "https://github.com/0x6b/warpnine-fonts"
keywords = ["font", "opentype", "variable-font", "instancer"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "font_instancer"
path = "src/lib.rs"

[[bin]]
name = "font-instancer"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
read-fonts.workspace = true
write-fonts.workspace = true
skrifa.workspace = true
thiserror.workspace = true
kurbo.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
font-test-data.workspace = true

[features]
default = ["cli"]
cli = ["dep:clap"]
