[package]
name = "warpnine-font-metadata"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
read-fonts.workspace = true
write-fonts.workspace = true
anyhow.workspace = true
chrono.workspace = true
warpnine-font-ops.workspace = true

[dev-dependencies]
font-test-data.workspace = true
